微调部分代码风格，抽取限流部分逻辑